--- a/index.html
+++ b/index.html
@@ -539,8 +539,7 @@
 						<div class="col-xs-12 col-lg-6">
 							<div class="contact">
 								<h4 class="timeline_title">Contact form</h4>
-								<form class="form" name="enq" method="post" action="contact.php"
-									onsubmit="return validation();">
+								<form class="form" netlify>
 									<div class="row">
 										<div class="form-group col-md-6">
 											<input type="text" name="name" class="form-control" placeholder="Name"
