--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 						<div class="col-lg-3 col-sm-6 col-xs-12">
 							<div class="single_service">
 								<span class="ti-medall"></span>
-								<h3>Marketing</h3>
+								<h3>Project Management</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae accusantium
 									consectetur.</p>
 								<div class="ss_style"></div>
@@ -160,15 +160,6 @@
 							<div class="single_service">
 								<span class="ti-light-bulb"></span>
 								<h3>Development</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae accusantium
-									consectetur.</p>
-								<div class="ss_style"></div>
-							</div>
-						</div><!--END COL -->
-						<div class="col-lg-3 col-sm-6 col-xs-12">
-							<div class="single_service">
-								<span class="ti-crown"></span>
-								<h3>Brand logo</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae accusantium
 									consectetur.</p>
 								<div class="ss_style"></div>
@@ -245,301 +236,13 @@
 						</div><!--- END COL -->
 					</div><!--- END ROW -->
 				</div><!-- END ITEM THREE -->
-				<div id="item-four">
-					<div class="row mbnone30">
-						<div class="col-lg-4 col-sm-4 col-xs-12">
-							<div class="grid">
-								<figure class="effect-sadie">
-									<img src="assets/img/portfolio/1.jpg" alt="" />
-									<figcaption>
-										<p><a href="assets/img/portfolio/1.jpg" data-toggle="modal"
-												data-target="#projectModal">View Project</a></p>
-									</figcaption>
-								</figure>
-							</div><!--- END GRID -->
-						</div><!--- END COL -->
-						<div class="col-lg-4 col-sm-4 col-xs-12">
-							<div class="grid">
-								<figure class="effect-sadie">
-									<img src="assets/img/portfolio/2.jpg" alt="" />
-									<figcaption>
-										<p><a href="#" data-toggle="modal" data-target="#projectModal2">View Project</a>
-										</p>
-									</figcaption>
-								</figure>
-							</div><!--- END GRID -->
-						</div><!--- END COL -->
-						<div class="col-lg-4 col-sm-4 col-xs-12">
-							<div class="grid">
-								<figure class="effect-sadie">
-									<img src="assets/img/portfolio/3.jpg" alt="" />
-									<figcaption>
-										<p><a href="#" data-toggle="modal" data-target="#projectModal3">View Project</a>
-										</p>
-									</figcaption>
-								</figure>
-							</div><!--- END GRID -->
-						</div><!--- END COL -->
-						<div class="col-lg-4 col-sm-4 col-xs-12">
-							<div class="grid">
-								<figure class="effect-sadie">
-									<img src="assets/img/portfolio/4.jpg" alt="" />
-									<figcaption>
-										<p><a href="#" data-toggle="modal" data-target="#projectModal4">View Project</a>
-										</p>
-									</figcaption>
-								</figure>
-							</div><!--- END GRID -->
-						</div><!--- END COL -->
-						<div class="col-lg-4 col-sm-4 col-xs-12">
-							<div class="grid">
-								<figure class="effect-sadie">
-									<img src="assets/img/portfolio/5.jpg" alt="" />
-									<figcaption>
-										<p><a href="#" data-toggle="modal" data-target="#projectModal5">View Project</a>
-										</p>
-									</figcaption>
-								</figure>
-							</div><!--- END GRID -->
-						</div><!--- END COL -->
-						<div class="col-lg-4 col-sm-4 col-xs-12">
-							<div class="grid">
-								<figure class="effect-sadie">
-									<img src="assets/img/portfolio/6.jpg" alt="" />
-									<figcaption>
-										<p><a href="#" data-toggle="modal" data-target="#projectModal6">View Project</a>
-										</p>
-									</figcaption>
-								</figure>
-							</div><!--- END GRID -->
-						</div><!--- END COL -->
-
-						<!-- Overlay Modal  -->
-						<div class="modal fade" id="projectModal">
-							<div class="modal-dialog">
-								<div class="modal-content">
-									<div class="modal-header">
-										<button type="button" class="close" data-dismiss="modal"
-											aria-label="Close"><span aria-hidden="true">&times;</span></button>
-									</div>
-									<div class="modal-body">
-										<img src="assets/img/portfolio/1.jpg" class="img-fluid" alt="" />
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer porttitor
-											massa sed velit egestas vulputate. Morbi turpis tellus, porta in cursus at,
-											finibus vitae dui. Nam mollis quam a sem iaculis euismod. Pellentesque
-											habitant morbi tristique senectus et netus et malesuada fames ac turpis
-											egestas. Sed ac pharetra justo, vel dapibus tortor. Etiam laoreet imperdiet
-											varius.</p>
-										<ul class="list-unstyled project-list">
-											<li><label>Client : </label> templatemonster</li>
-											<li><label>Category :</label> Web Design</li>
-											<li><label>Date : </label> 01 December 2022</li>
-											<li><label>Project Url : </label> <a href="#">www.templatemonster.com</a>
-											</li>
-										</ul>
-									</div>
-								</div><!-- /.modal-content -->
-							</div><!-- /.modal-dialog -->
-						</div><!-- /.modal -->
-						<!-- Overlay Modal  -->
-						<div class="modal fade" id="projectModal2">
-							<div class="modal-dialog">
-								<div class="modal-content">
-									<div class="modal-header">
-										<button type="button" class="close" data-dismiss="modal"
-											aria-label="Close"><span aria-hidden="true">&times;</span></button>
-									</div>
-									<div class="modal-body">
-										<iframe src="https://www.youtube.com/embed/DpA_ZXk_3hY"></iframe>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer porttitor
-											massa sed velit egestas vulputate. Morbi turpis tellus, porta in cursus at,
-											finibus vitae dui. Nam mollis quam a sem iaculis euismod. Pellentesque
-											habitant morbi tristique senectus et netus et malesuada fames ac turpis
-											egestas. Sed ac pharetra justo, vel dapibus tortor. Etiam laoreet imperdiet
-											varius.</p>
-										<ul class="list-unstyled project-list">
-											<li><label>Client : </label> templatemonster</li>
-											<li><label>Category :</label> Web Design</li>
-											<li><label>Date : </label> 01 December 2022</li>
-											<li><label>Project Url : </label> <a href="#">www.templatemonster.com</a>
-											</li>
-										</ul>
-									</div>
-								</div><!-- /.modal-content -->
-							</div><!-- /.modal-dialog -->
-						</div><!-- /.modal -->
-						<!-- Overlay Modal  -->
-						<div class="modal fade" id="projectModal3">
-							<div class="modal-dialog">
-								<div class="modal-content">
-									<div class="modal-header">
-										<button type="button" class="close" data-dismiss="modal"
-											aria-label="Close"><span aria-hidden="true">&times;</span></button>
-									</div>
-									<div class="modal-body">
-										<img src="assets/img/portfolio/3.jpg" class="img-fluid" alt="" />
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer porttitor
-											massa sed velit egestas vulputate. Morbi turpis tellus, porta in cursus at,
-											finibus vitae dui. Nam mollis quam a sem iaculis euismod. Pellentesque
-											habitant morbi tristique senectus et netus et malesuada fames ac turpis
-											egestas. Sed ac pharetra justo, vel dapibus tortor. Etiam laoreet imperdiet
-											varius.</p>
-										<ul class="list-unstyled project-list">
-											<li><label>Client : </label> templatemonster</li>
-											<li><label>Category :</label> Web Design</li>
-											<li><label>Date : </label> 01 December 2022</li>
-											<li><label>Project Url : </label> <a href="#">www.templatemonster.com</a>
-											</li>
-										</ul>
-									</div>
-								</div><!-- /.modal-content -->
-							</div><!-- /.modal-dialog -->
-						</div><!-- /.modal -->
-						<!-- Overlay Modal  -->
-						<div class="modal fade" id="projectModal4">
-							<div class="modal-dialog">
-								<div class="modal-content">
-									<div class="modal-header">
-										<button type="button" class="close" data-dismiss="modal"
-											aria-label="Close"><span aria-hidden="true">&times;</span></button>
-									</div>
-									<div class="modal-body">
-										<img src="assets/img/portfolio/4.jpg" class="img-fluid" alt="" />
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer porttitor
-											massa sed velit egestas vulputate. Morbi turpis tellus, porta in cursus at,
-											finibus vitae dui. Nam mollis quam a sem iaculis euismod. Pellentesque
-											habitant morbi tristique senectus et netus et malesuada fames ac turpis
-											egestas. Sed ac pharetra justo, vel dapibus tortor. Etiam laoreet imperdiet
-											varius.</p>
-										<ul class="list-unstyled project-list">
-											<li><label>Client : </label> templatemonster</li>
-											<li><label>Category :</label> Web Design</li>
-											<li><label>Date : </label> 01 December 2022</li>
-											<li><label>Project Url : </label> <a href="#">www.templatemonster.com</a>
-											</li>
-										</ul>
-									</div>
-								</div><!-- /.modal-content -->
-							</div><!-- /.modal-dialog -->
-						</div><!-- /.modal -->
-						<!-- Overlay Modal  -->
-						<div class="modal fade" id="projectModal5">
-							<div class="modal-dialog">
-								<div class="modal-content">
-									<div class="modal-header">
-										<button type="button" class="close" data-dismiss="modal"
-											aria-label="Close"><span aria-hidden="true">&times;</span></button>
-									</div>
-									<div class="modal-body">
-										<iframe src="https://www.youtube.com/embed/DpA_ZXk_3hY"></iframe>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer porttitor
-											massa sed velit egestas vulputate. Morbi turpis tellus, porta in cursus at,
-											finibus vitae dui. Nam mollis quam a sem iaculis euismod. Pellentesque
-											habitant morbi tristique senectus et netus et malesuada fames ac turpis
-											egestas. Sed ac pharetra justo, vel dapibus tortor. Etiam laoreet imperdiet
-											varius.</p>
-										<ul class="list-unstyled project-list">
-											<li><label>Client : </label> templatemonster</li>
-											<li><label>Category :</label> Web Design</li>
-											<li><label>Date : </label> 01 December 2022</li>
-											<li><label>Project Url : </label> <a href="#">www.templatemonster.com</a>
-											</li>
-										</ul>
-									</div>
-								</div><!-- /.modal-content -->
-							</div><!-- /.modal-dialog -->
-						</div><!-- /.modal -->
-						<!-- Overlay Modal  -->
-						<div class="modal fade" id="projectModal6">
-							<div class="modal-dialog">
-								<div class="modal-content">
-									<div class="modal-header">
-										<button type="button" class="close" data-dismiss="modal"
-											aria-label="Close"><span aria-hidden="true">&times;</span></button>
-									</div>
-									<div class="modal-body">
-										<img src="assets/img/portfolio/6.jpg" class="img-fluid" alt="" />
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer porttitor
-											massa sed velit egestas vulputate. Morbi turpis tellus, porta in cursus at,
-											finibus vitae dui. Nam mollis quam a sem iaculis euismod. Pellentesque
-											habitant morbi tristique senectus et netus et malesuada fames ac turpis
-											egestas. Sed ac pharetra justo, vel dapibus tortor. Etiam laoreet imperdiet
-											varius.</p>
-										<ul class="list-unstyled project-list">
-											<li><label>Client : </label> templatemonster</li>
-											<li><label>Category :</label> Web Design</li>
-											<li><label>Date : </label> 01 December 2022</li>
-											<li><label>Project Url : </label> <a href="#">www.templatemonster.com</a>
-											</li>
-										</ul>
-									</div>
-								</div><!-- /.modal-content -->
-							</div><!-- /.modal-dialog -->
-						</div><!-- /.modal -->
-					</div><!--- END ROW -->
-				</div><!-- END ITEM FOUR -->
-				<div id="item-five">
-					<div class="row mbnone30">
-						<div class="col-lg-6 col-sm-12 col-xs-12">
-							<div class="blog-post">
-								<div class="blog-item-home" style="background-image:url(assets/img/blog/1.jpg);">
-									<div class="blog-post-content text-center">
-										<a href="#">
-											<h5>Lifestyle</h5>
-											<h3>Build a lifestyle around your the audience will follow</h3>
-											<span>By - Rakshitha &nbsp; &nbsp; 24 November 2022</span>
-										</a>
-									</div>
-								</div>
-							</div><!--- END BLOG POST -->
-						</div><!--- END COL -->
-						<div class="col-lg-6 col-sm-12 col-xs-12">
-							<div class="blog-post">
-								<div class="blog-item-home" style="background-image:url(assets/img/blog/2.jpg);">
-									<div class="blog-post-content text-center">
-										<a href="#">
-											<h5>Design</h5>
-											<h3>Creativity is intelligence having fun</h3>
-											<span>By - Rakshitha &nbsp; &nbsp; 25 November 2022</span>
-										</a>
-									</div>
-								</div>
-							</div><!--- END BLOG POST -->
-						</div><!--- END COL -->
-						<div class="col-lg-6 col-sm-12 col-xs-12">
-							<div class="blog-post">
-								<div class="blog-item-home" style="background-image:url(assets/img/blog/3.jpg);">
-									<div class="blog-post-content text-center">
-										<a href="#">
-											<h5>Travel</h5>
-											<h3>Travel is never a matter of money but of courage</h3>
-											<span>By - Rakshitha &nbsp; &nbsp; 26 November 2022</span>
-										</a>
-									</div>
-								</div>
-							</div><!--- END BLOG POST -->
-						</div><!--- END COL -->
-						<div class="col-lg-6 col-sm-12 col-xs-12">
-							<div class="blog-post">
-								<div class="blog-item-home" style="background-image:url(assets/img/blog/4.jpg);">
-									<div class="blog-post-content text-center">
-										<a href="#">
-											<h5>Develop</h5>
-											<h3>Development is a multidimensional concept</h3>
-											<span>By - Rakshitha &nbsp; &nbsp; 27 November 2022</span>
-										</a>
-									</div>
-								</div>
-							</div><!--- END BLOG POST -->
-						</div><!--- END COL -->
-					</div><!--- END ROW -->
-				</div><!-- END ITEM FIVE -->
 				<div id="item-six">
 					<div class="row">
 						<div class="col-xs-12 col-lg-6">
 							<div class="contact">
 								<h4 class="timeline_title">Contact form</h4>
-								<form class="form" netlify>
+								<form class="form" name="enq" method="post" action="contact.php"
+									onsubmit="return validation();" netlify>
 									<div class="row">
 										<div class="form-group col-md-6">
 											<input type="text" name="name" class="form-control" placeholder="Name"
